[gd_scene load_steps=2 format=3 uid="uid://c5abph78kkqft"]

[ext_resource type="Script" uid="uid://csddw7y724s8k" path="res://GameUi.gd" id="1_4itvn"]

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4itvn")

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Label" type="Label" parent="TopPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label2" type="Label" parent="TopPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="Label3" type="Label" parent="TopPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0

[node name="RightPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerList" type="ItemList" parent="RightPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChatLog" type="RichTextLabel" parent="BottomPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ChatInput" type="LineEdit" parent="BottomPanel"]
layout_mode = 0
offset_right = 68.5625
offset_bottom = 31.0

[node name="VotePanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="VotePanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VoteList" type="ItemList" parent="VotePanel/VBoxContainer"]
layout_mode = 2

[node name="VoteButton" type="Button" parent="VotePanel/VBoxContainer"]
layout_mode = 2

[node name="NightActionPanel" type="Panel" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="VBoxContainer" type="VBoxContainer" parent="NightActionPanel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ActionList" type="ItemList" parent="NightActionPanel/VBoxContainer"]
layout_mode = 2

[node name="ActionButton" type="Button" parent="NightActionPanel/VBoxContainer"]
layout_mode = 2

[node name="Crosshair" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
